--- a/index.html
+++ b/index.html
@@ -853,8 +853,11 @@
 		<tr>
 			<th colspan="4" id="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
+<tr>
+   <th colspan="4"><img src="jummah.JPG" alt="Flowers in Chania" width="100%"></th>
 	</table>
 	<button onclick="print();">print</button>
 </center>
+<img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
 </body>
 </html>
