--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<style type="text/css">
 button{
     background-color:green;
-    font-size:10px;
+    font-size:20px;
+    border:3px solid indigo;
 }
 button:hover{
     background-color:white;
     font-size:1px;
     color:white;
+    border:1px solid white;
 }
 		table{
 			font-family: arial,sans-serif;
@@ -872,6 +874,6 @@ function printing(){
    alert("Download PDF!");
    print();
 }
-
+</script>
 </body>
 </html>
