--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
 	<title>Jummah chart prepare</title>
 	<style type="text/css">
 button{
-    background-color:green;
-    font-size:20px;
-    border:3px solid indigo;
+  background-color: #4C
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
 }
 button:hover{
     background-color:white;
     font-size:1px;
     color:white;
-    border:1px solid white;
+    
 }
+body{
+  max-width: 500px;
+  margin: auto;
+  padding: 10px;
+ }
 		table{
 			font-family: arial,sans-serif;
 			border-collapse: collapse;
@@ -58,8 +69,7 @@ button:hover{
 		}
 	</style>
 </head>
-<body >
-	<center>
+<body
 
 	 	
 	<table lang="ta">
@@ -868,7 +878,6 @@ button:hover{
    <th colspan="4"><img src="jummah.JPG" alt="Flowers in Chania" style="max-width:100%";height:auto;></th>
 	</table>
 	<button onclick="printing();">print</button>
-</center>
 <script>
 function printing(){
    alert("Download PDF!");
