--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Jummah chart prepare</title>
 	<style type="text/css">
 button{
-  background-color: #4C
+  background-color: #4CAF50;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -23,9 +23,8 @@ button:hover{
     
 }
 body{
-  max-width: 500px;
-  margin: auto;
-  padding: 10px;
+  align-content: center;
+  text-align:center;
  }
 		table{
 			font-family: arial,sans-serif;
@@ -69,7 +68,7 @@ body{
 		}
 	</style>
 </head>
-<body
+<body>
 
 	 	
 	<table lang="ta">
