--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ body{
 			<th colspan="4" id="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
 <tr>
-   <th colspan="4"><img src="jummah.JPG" alt="Flowers in Chania" style="max-width:100%";height:auto;></th>
+   <th colspan="4"><img src="jummah.JPG" alt="Flowers in Chania" style="max-width:100%;height:auto;"></th>
 	</table>
 	<button onclick="printing();">print</button>
 <script>
