--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ button:hover{
     color:white;
     
 }
-body{
-  align-content: center;
+#content{
+  
   text-align:center;
  }
 		table{
@@ -68,7 +68,7 @@ body{
 	</style>
 </head>
 <body>
-
+   <div id="content">
 	 	
 	<table lang="ta">
 		<tr>
@@ -875,7 +875,10 @@ body{
 <tr>
    <th colspan="4"><img src="jummah.JPG" alt="Flowers in Chania" style="max-width:100%;height:auto;"></th>
 	</table>
+</div>
+<center>
 	<button onclick="printing();">print</button>
+</center>
 <script>
 function printing(){
    alert("Download PDF!");
