--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ button:hover{
 #content{
   
   text-align:center;
+  margin:20px 20px 20px 20px;
+  padding:30px 50px;
+  
  }
 		table{
 			font-family: arial,sans-serif;
