--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ button{
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
+	border-radius:20px;
 }
 button:hover{
     background-color:white;
@@ -889,5 +890,6 @@ function printing(){
    print();
    
 }
+	</script>
 </body>
 </html>
