--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ button{
   margin: 4px 2px;
 	border-radius:20px;
 }
-button:hover{
+button:onfocus{
     background-color:white;
     font-size:1px;
     color:white;
@@ -884,7 +884,7 @@ button:hover{
 	<button onclick="printing();">DOWNLOAD PDF!</button>
 </center>
 <script>
-	var a=document.getElementById('content').addEventListener("click",function(event){event.preventdefault()});
+	
 function printing(){
    alert("Download PDF!");
    print();
