--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ button{
   margin: 4px 2px;
 	border-radius:20px;
 }
-button:onfocus{
+button:hover{
     background-color:white;
     font-size:1px;
     color:white;
