--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ta">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 
 
 	<title>Jummah chart prepare</title>
@@ -43,7 +45,7 @@ button:hover{
 			border-width: 10px 20px;
 			width: 60%;
 			height: auto;
-			margin: 100px 10px 10px 100px;			
+			margin: 300px 1px 20px 200px;			
 		}
 		
 		td,th{
