--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@ button:hover{
 			font-weight: bolder;
 			font-size: 80%;
 
-
 		}
 		
 
@@ -86,20 +85,19 @@ button:hover{
 	 	
 	<table lang="ta" align="center">
 		<tr>
-			<th colspan="4" id="tntj">தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம்
-ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
+			<th colspan="4" id="tntj">தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
 		</tr>
 		 <tr id="head">
 			<th>S.NO</th>
-			<th>கிளை/பொறுப்பாளர்</th>
-			<th>நேரம்</th>
-			<th>தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th style="width:50%">கிளை/பொறுப்பாளர்</th>
+			<th style="width: 20%;">நேரம்</th>
+			<th style="width:40%;">தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
 			<td>1.</td>
 			<td>ஆவணம் - 9994585432 </td>
-			<td>12:15 - 12:45</td>
+			<td >12:15 - 12:45</td>
 			<td><select>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
