--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ button:hover{
 		</tr>
 		 <tr id="head">
 			<th>S.NO</th>
-			<th style="width:50%">கிளை/பொறுப்பாளர்</th>
-			<th style="width: 20%;">நேரம்</th>
-			<th style="width:40%;">தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th style="width:70%">கிளை/பொறுப்பாளர்</th>
+			<th style="width: 40%;">நேரம்</th>
+			<th style="width:60%;">தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
@@ -889,7 +889,7 @@ button:hover{
 	</table>
 </div>
 <center>
-	<button onclick="printing();">DOWNLOAD PDF!</button>
+	<button onclick="printing();">DONLOAD PDF!</button>
 </center>
 <script>
 function printing(){
