--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@ button:hover{
 		table{
 			font-family: arial,sans-serif;
 			border-collapse: collapse;
-			border-width: 10px 20px;
-			width: 60%;
-			height: auto;
-			margin: 300px 1px 20px 200px;			
+		
+			margin: 200px 200px 10px;		
 		}
 		
 		td,th{
@@ -89,9 +87,9 @@ button:hover{
 		</tr>
 		 <tr id="head">
 			<th>S.NO</th>
-			<th style="width:70%">கிளை/பொறுப்பாளர்</th>
-			<th style="width: 40%;">நேரம்</th>
-			<th style="width:60%;">தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th >கிளை/பொறுப்பாளர்</th>
+			<th style="width:200%;">நேரம்</th>
+			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
@@ -889,7 +887,7 @@ button:hover{
 	</table>
 </div>
 <center>
-	<button onclick="printing();">DONLOAD PDF!</button>
+	<button onclick="printing();">DOWNLOAD PDF!</button>
 </center>
 <script>
 function printing(){
