--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ button:hover{
 		</tr>
 		 <tr id="head">
 			<th>S.NO</th>
-			<th >கிளை/பொறுப்பாளர்</th>
-			<th style="width:200%;">நேரம்</th>
+			<th  style="width:100%">கிளை/பொறுப்பாளர்</th>
+			<th >நேரம்</th>
 			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
@@ -885,7 +885,7 @@ button:hover{
 			<th colspan="4" id="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
 <tr>
-   <th colspan="4" style="background-color: #312542;"><img src="jummah.JPG" alt="Jummah img" style="width:100%;height:100%;vertical-align: bottom;" align="center"></th>
+   <th colspan="4" style="background-color: #312542;"><img src="jummah.JPG" alt="Jummah img" style="max-width:100%;height:auto;"></th>
 	</table>
 </div>
 <center>
