--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ button:hover{
 			font-weight: bolder;
 			font-size: 20px;
 			text-align: center;
+			padding: 20px;
 		}
 		select{
 			border: 1px solid white;
@@ -89,8 +90,8 @@ button:hover{
 		</tr>
 		 <tr id="head">
 			<th>S.NO</th>
-			<th  style="width:100%">கிளை/பொறுப்பாளர்</th>
-			<th >நேரம்</th>
+			<th >கிளை/பொறுப்பாளர்</th>
+			<th style="width:20%">நேரம்</th>
 			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
