--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ button:hover{
 			padding:1px;
 			font-weight: bolder;
 			font-size: 90%;
+                        text-indent:0.01px;
+                          text-overflow:" ";
 		}
 	</style>
 </head>
