--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ button:hover{
 			padding:1px;
 			font-weight: bolder;
 			font-size: 90%;
-                        text-indent:0.01px;
-                          text-overflow:" ";
+                        -webkit-appearance: none;
 		}
 	</style>
 </head>
