--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button:hover{
 		}
 	</style>
 </head>
-<body onoffline="offline()" ononline="online()">>
+<body onoffline="offline()" ononline="online()">
    <div id="content">
 	 	
 	<table lang="ta" align="center">
