--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ button{
   border-radius: 20px;
 }
 button:hover{
-    background-color:white;
-    font-size:1px;
+    background-color:red;
     color:white;
     
 }
@@ -75,21 +74,66 @@ button:hover{
 			border: 1px solid white;
 			background-color: white;
 			text-align: center;
-			padding:1px;
+			padding:8px;
 			font-weight: bolder;
 			font-size: 90%;
-                        -webkit-appearance: none;
+			-webkit-appearance: none;
+			cursor: pointer;
+		}
+		select:hover{
+			background-color: #ff1212;
+			border-radius: 20px;
+			border: 2px dashed black;
+		}
+		body{
+			-webkit-print-color-adjust: exact !important;
+		}
+		@media print{
+			 * {
+			 	background: transparent !important;
+				box-shadow: none !important;
+				text-shadow: none !important;
+			}
+			.print-container, .print-container * {
+				visibility: visible;
+			}
+			table{
+				left: 0px;
+				top: 0px;
+			}
+			.tntj{
+				background-color: black !important;
+			color: white !important;
+			font-weight: bolder !important;
+			font-size: 20px !important;
+			text-align: center !important;
+			padding: 20px !important;
+			}
+			.head{
+				background-color: green !important;
+			color: white !important;
+			font-weight: bolder !important;
+			font-size: 100% !important;
+			}
+			@page{
+				margin: 10cm;
+				size: a3;
+			}
+			button{
+				display: none;
+			}
+
 		}
 	</style>
 </head>
-<body onoffline="offline()" ononline="online()">
-   <div id="content">
+<body>
+   <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center">
 		<tr>
-			<th colspan="4" id="tntj">தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
+			<th colspan="4" id="tntj" class=tntj>தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
 		</tr>
-		 <tr id="head">
+		 <tr id="head" class="head">
 			<th>S.NO</th>
 			<th >கிளை/பொறுப்பாளர்</th>
 			<th style="width:20%">நேரம்</th>
@@ -884,7 +928,7 @@ button:hover{
 		
 		
 		<tr>
-			<th colspan="4" id="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
+			<th colspan="4" id="tntj" class="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
 <tr>
    <th colspan="4" style="background-color: #312542;"><img src="jummah.JPG" alt="Jummah img" style="max-width:100%;height:auto;"></th>
@@ -894,12 +938,6 @@ button:hover{
 	<button onclick="printing();">DOWNLOAD PDF!</button>
 </center>
 <script>
-   function online(){
-      alert("🌐Back online...");
-    }
-    function offline(){
-      alert("OOPS ! 😯\n Something Went Wrong!\nPlease,Check Your Network Connection....\n_ERR_004_CONN_");
-    }
 function printing(){
    alert("Download PDF!");
    print();
