--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+ 
 
 	<title>Jummah chart prepare</title>
 	<style type="text/css">
@@ -73,7 +74,7 @@ button:hover{
 			border: 1px solid white;
 			background-color: white;
 			text-align: center;
-			padding:8px;
+			padding:5px;
 			font-weight: bolder;
 			font-size: 90%;
 			-webkit-appearance: none;
@@ -88,34 +89,8 @@ button:hover{
 			-webkit-print-color-adjust: exact !important;
 		}
 		@media print{
-			 * {
-			 	background: transparent !important;
-				box-shadow: none !important;
-				text-shadow: none !important;
-			}
-			.print-container, .print-container * {
-				visibility: visible;
-			}
-			table{
-				left: 0px;
-				top: 0px;
-			}
-			.tntj{
-				background-color: black !important;
-			color: white !important;
-			font-weight: bolder !important;
-			font-size: 20px !important;
-			text-align: center !important;
-			padding: 20px !important;
-			}
-			.head{
-				background-color: green !important;
-			color: white !important;
-			font-weight: bolder !important;
-			font-size: 100% !important;
-			}
+			 
 			@page{
-				margin: 10cm;
 				size: a3;
 			}
 			button{
@@ -130,7 +105,7 @@ button:hover{
 	 	
 	<table lang="ta" align="center">
 		<tr>
-			<th colspan="4" id="tntj" class=tntj>தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
+			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
 		</tr>
 		 <tr id="head" class="head">
 			<th>S.NO</th>
@@ -927,7 +902,7 @@ button:hover{
 		
 		
 		<tr>
-			<th colspan="4" id="tntj" class="tntj">தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
+			<th colspan="4" id="tntj" >தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
 <tr>
    <th colspan="4" style="background-color: #312542;"><img src="jummah.JPG" alt="Jummah img" style="max-width:100%;height:auto;"></th>
