--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
  
 
 	<title>Jummah chart prepare</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil:ital@1&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
 	<style type="text/css">
 button{
   background-color: #4CAF50;
@@ -40,13 +46,15 @@ button:hover{
   border: 100px;
  }*/
 		table{
-			font-family: arial,sans-serif;
+			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
-		
-			margin: 200px 200px 10px;		
+		    font-weight: bolder;
+			margin: 60px 60px 10px;		
 		}
 		
 		td,th{
+            font-family: 'Tiro Tamil', serif;
+            font-weight: bolder;
 			border: 2px solid black;
 			text-align: center;
 			font-weight: bolder;
@@ -56,13 +64,14 @@ button:hover{
 		
 
 		#head{
+			font-family: 'Tiro Tamil', serif;
 			background-color: green;
 			color: white;
 			font-weight: bolder;
 			font-size: 100%;
 		}
 		#tntj{
-			
+			font-family: 'Coiny', cursive;
 			background-color: black;
 			color: white;
 			font-weight: bolder;
@@ -79,11 +88,13 @@ button:hover{
 			font-size: 90%;
 			-webkit-appearance: none;
 			cursor: pointer;
+			font-family: 'Tiro Tamil', serif;
 		}
 		select:hover{
 			background-color: #ff1212;
 			border-radius: 20px;
 			border: 2px dashed black;
+
 		}
 		body{
 			-webkit-print-color-adjust: exact !important;
@@ -93,6 +104,35 @@ button:hover{
 			@page{
 				size: a3;
 			}
+		table{
+			font-family: 'Tiro Tamil', serif !important;
+			border-collapse: collapse;	
+			font-weight: bolder;
+		}
+		
+		td,th{
+			font-family: 'Tiro Tamil', serif !important;
+			border: 2px solid black;
+			text-align: center;
+			font-weight: bolder;
+			font-size: 80%;
+
+		}
+		
+		#head {
+			font-family: 'Coiny', cursive !important;
+			padding: 10px !important;
+			font-weight: bolder !important;
+			font-size: 100% !important;
+		}
+		#tntj{
+		    font-family: 'Coiny', cursive !important;
+			font-weight: bolder !important;
+			font-size: 20px !important;
+			text-align: center !important;
+			padding: 20px !important;
+		}
+		
 			button{
 				display: none;
 			}
@@ -100,10 +140,10 @@ button:hover{
 		}
 	</style>
 </head>
-<body>
+<body >
    <div id="content" class="print-container">
 	 	
-	<table lang="ta" align="center">
+	<table lang="ta" align="center" >
 		<tr>
 			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
 		</tr>
