--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ function online(){
 function printing(){
    alert("Download PDF!");
    print();
-   
+   <noscript>doesn't work</noscript>
 }
 </script>
 </body>
