--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<style type="text/css">
 button{
   background-color: #4CAF50;
-  border: none;
+  border: 2px solid red;
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -30,6 +30,7 @@ button{
 button:hover{
     background-color:red;
     color:white;
+    border:3px Solid #4CAF50;
     
 }
 /*	
@@ -956,7 +957,6 @@ function online(){
 function printing(){
    alert("Download PDF!");
    print();
-   <noscript>doesn't work</noscript>
 }
 </script>
 </body>
