--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
  
   
 	<title>Jummah chart prepare</title>
@@ -120,8 +120,8 @@
 	<div class="container" id="form_container">
 		<div id="check" >Incorrect details !</div>
 	<form class="login_form" id="form" name="form">
-	
-	<br>	
+	<br>
+
 	<label> user name</label>
 	<br>
 	<br>
