--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             font-family: 'Tiro Tamil', serif;
             font-weight: bolder;
 			border: 2px solid black;
-			text-align: center;
+			text-align: left;
 			font-weight: bolder;
 			font-size: 80%;
 
@@ -81,13 +81,13 @@
 			font-family: 'Tiro Tamil', serif !important;
 			border-collapse: collapse;	
 			font-weight: bolder;
-			margin: 200px 60px 100px !important;
+			margin: 200px 100px 100px !important;
 		}
 		
 		td,th{
 			font-family: 'Tiro Tamil', serif !important;
 			border: 2px solid black;
-			text-align: center;
+			text-align: left;
 			font-weight: bolder;
 			font-size: 80%;
 
