--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	 <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   
@@ -11,9 +11,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil:ital@1&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+
+<!-- <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet"> -->
+
+<link href="https://fonts.googleapis.com/css2?family=Arima:wght@700&display=swap" rel="stylesheet">
+
 	<style type="text/css">
 
 #content,#button{
@@ -44,18 +46,19 @@
 			font-size: 100%;
 		}
 		#tntj{
-			font-family: 'Coiny', cursive;
+			font-family: 'Arima', cursive;
 			background-color: black;
 			color: white;
 			font-weight: bolder;
 			font-size: 20px;
 			text-align: center;
-			padding: 20px;
+			padding: 20px 20px 1px;
 		}
+		
 		select{
 			border: 1px solid white;
 			background-color: white;
-			text-align: center;
+			text-align: left;
 			padding:5px;
 			font-weight: bolder;
 			font-size: 90%;
@@ -94,17 +97,25 @@
 		}
 		
 		#head {
-			font-family: 'Coiny', cursive !important;
+			font-family: 'Tiro Tamil', serif !important;
 			padding: 10px !important;
 			font-weight: bolder !important;
 			font-size: 100% !important;
 		}
 		#tntj{
-		    font-family: 'Coiny', cursive !important;
+		    font-family: 'Arima', cursive !important;
 			font-weight: bolder !important;
 			font-size: 20px !important;
 			text-align: center !important;
 			padding: 20px !important;
+		}
+		#date_style{
+			font-family: 'Tiro Tamil', serif;
+			background-color: black !important;
+			color: white !important;
+			font-weight: bolder;
+			font-size: 20px;
+			border: 2px solid black !important;
 		}
 		
 			button,form{
@@ -122,7 +133,7 @@
 	<form class="login_form" id="form" name="form">
 	<br>
 
-	<label> user name</label>
+	<label> User Name</label>
 	<br>
 	<br>
 	<input type="text" name="uname" id="uname" placeholder="User Name" required autofocus>
@@ -130,10 +141,11 @@
 	<br>
 	<br>
 	<br>
-	<label >password</label>
+	<label >Password</label>
 	<br>
 	<br>
 	<input type="password" name="password" id="password" placeholder="*******" required autofocus>
+	<input type="checkbox" onclick="showpassword();" id="showpwd"><label id="showpwd">show password</label>
 	<div id="check_pwd">Please Enter a valid password !</div>
 	<br>
 	<button type="submit" name="submit" id="submitbtn" onclick="validate()" >Login</button>
@@ -157,9 +169,11 @@
    var pass= "tntj";
  	// body...
  	if (userName.value != admin || pass_word.value != pass ) {
- 		
-        userName.style.border= "2px solid red";
-        pass_word.style.border = "2px solid red"
+ 		userName.style.border= "2px solid red";
+        pass_word.style.border = "2px solid red";
+        
+        userName.style.outline= "2px solid red";
+        pass_word.style.outline = "2px solid red";
         userName.focus();
         valid.style.display = "block";
         // alert("Incorrect Details")
@@ -181,18 +195,29 @@
           
  	}
  }
-
+function showpassword() {
+  var x = document.getElementById("password");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
 </script>
    <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center" >
 		<tr>
-			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம் - 22.07.2022</th>
+			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்.</th>
+		</tr>
+		<tr>
+			<th colspan="4" id="date"><i>ஜும்மா நாள் :</i><input type="date" id="date_style">
+			</th>
 		</tr>
 		 <tr id="head" class="head">
 			<th>S.NO</th>
 			<th >கிளை/பொறுப்பாளர்</th>
-			<th style="width:20%">நேரம்</th>
+			<th >நேரம்</th>
 			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
