--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
 		    font-weight: bolder;
-			margin: 60px 200px 10px;		
+			margin: 60px 50px 10px;		
 		}
 		
 		td,th{
@@ -121,7 +121,9 @@
 			button,form{
 				display: none !important;
 			}
-
+                .container{
+                       display: none !important;
+                            }
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
