--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
 		    font-weight: bolder;
-			margin: 60px 50px 10px;		
+			margin: 5px 10px 10px;		
 		}
 		
 		td,th{
@@ -82,8 +82,8 @@
 			}
 		table{
 			font-family: 'Tiro Tamil', serif !important;
-			border-collapse: collapse;	
-			font-weight: bolder;
+			border-collapse: collapse !important;	
+			font-weight: bolder !important;
 			margin: 200px 100px 100px !important;
 		}
 		
