--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
 		    font-weight: bolder;
-			margin: 5px 10px 10px;		
+			margin: 20px 50px 50px 50px;		
 		}
 		
 		td,th{
