--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ function showpassword() {
 function printing(){
    alert("Download PDF!");
    print();
-   location.reload();
+   alert("please refresh the page...");
    
 }
 function online(){
