--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
 			font-size: 20px;
 			border: 2px solid black !important;
 		}
-		
+}
+		@media only screen{
 			button,form{
 				display: none !important;
 			}
                 .container{
                        display: none !important;
                             }
+
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
