--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
                 .container{
                        display: none !important;
                             }
-
+#date_style{
+-webkit-appearance: none !important;
+}
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
