--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function showpassword() {
 			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்.</th>
 		</tr>
 		<tr>
-			<th colspan="4" id="date"><i>ஜும்மா நாள் :</i><input type="date" id="date_style">
+			<th colspan="4" id="date"><i>ஜும்மா நாள் :</i><input type="date" id="date_style" value="choose">
 			</th>
 		</tr>
 		 <tr id="head" class="head">
@@ -227,7 +227,7 @@ function showpassword() {
 			
 		</tr>
 		<tr>
-			<td>1.</td>
+			<td>12.</td>
 			<td>ஆவணம் - 9994585432 </td>
 			<td >12:15 - 12:45</td>
 			<td><select>
