--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
 		    font-weight: bolder;
+                          background-color:indigo;
 			margin: 3px 5px 5px 3px;		
 		}
 		
@@ -85,6 +86,7 @@
 			border-collapse: collapse !important;	
 			font-weight: bolder !important;
 			margin: 200px 100px 100px !important;
+                            background-color: white !important;
 		}
 		
 		td,th{
