--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   
-	<title>Jummah chart prepare</title>
+	<title>Jummah chart</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil:ital@1&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 			font-family: 'Tiro Tamil', serif;
 			border-collapse: collapse;
 		    font-weight: bolder;
-                          background-color:indigo;
+                          background-color:white;
 			margin: 3px 5px 5px 3px;		
 		}
 		
@@ -60,7 +60,7 @@
 			border: 1px solid white;
 			background-color: white;
 			text-align: left;
-			padding:5px;
+			
 			font-weight: bolder;
 			font-size: 90%;
 			-webkit-appearance: none;
