--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			border: 1px solid white;
 			background-color: white;
 			text-align: left;
-			
+			padding:5px;
 			font-weight: bolder;
 			font-size: 90%;
 			-webkit-appearance: none;
@@ -218,7 +218,7 @@ function showpassword() {
 			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்.</th>
 		</tr>
 		<tr>
-			<th colspan="4" id="date"><i>ஜும்மா நாள் :</i><input type="date" id="date_style" >
+			<th colspan="4" id="date"><strong>ஜும்மா நாள் :</strong><input type="date" id="date_style" >
 			</th>
 		</tr>
 		 <tr id="head" class="head">
