--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
 			font-size: 20px;
 			border: 2px solid black !important;
 		}
+               #date{
+			font-family: 'Arima', cursive;
+			background-color: black;
+			color: white;
+			font-weight: bolder;
+			font-size: 20px;
+			text-align: center;
+                        margin:0 auto !important;
+		}
 
 			button,form{
 				display: none !important;
