--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 			padding: 10px !important;
 			font-weight: bolder !important;
 			font-size: 100% !important;
+                         width:50px;
 		}
 		#tntj{
 		    font-family: 'Arima', cursive !important;
