--- a/index.html
+++ b/index.html
@@ -1050,8 +1050,8 @@ function online(){
     }
 
 </script>
-<!-- <footer>
+ <footer>
 	<cite>tntj©copyright2022</cite>
-</footer> -->
+</footer> 
 </body>
 </html>
