--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@ function showpassword() {
 			</th>
 		</tr>
 		 <tr id="head" class="head">
-			<th>S.NO</th>
-			<th >கிளை/பொறுப்பாளர்</th>
-			<th >நேரம்</th>
-			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th style="width:auto">S.NO</th>
+			<th style="width:auto">கிளை/பொறுப்பாளர்</th>
+			<th style="width:auto">நேரம்</th>
+			<th style="width:auto">தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
