--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         margin:0 auto !important;
 		}
 
-			button,form{
+			button,form,footer{
 				display: none !important;
 			}
                 .container{
@@ -232,10 +232,10 @@ function showpassword() {
 			</th>
 		</tr>
 		 <tr id="head" class="head">
-			<th style="width:auto">S.NO</th>
-			<th style="width:auto">கிளை/பொறுப்பாளர்</th>
-			<th style="width:auto">நேரம்</th>
-			<th style="width:auto">தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th style="width:10px">S.NO</th>
+			<th style="width:20px">கிளை/பொறுப்பாளர்</th>
+			<th style="width:15px">நேரம்</th>
+			<th style="width:20px">தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
