--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@ function online(){
 
 </script>
  <footer>
-	<cite>tntj©copyright2022</cite>
+	<cite style="font-weight:bolder;">tntj©copyright2022</cite>
 </footer> 
 </body>
 </html>
