--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 			font-size: 100% !important;
                          width:10% !important;
 		}
+.head{
+              font-family: 'Tiro Tamil', serif !important;
+	     padding: 10px !important;
+		font-weight: bolder !important;
+		font-size: 100% !important;
+                 width:5px !important;
+}
 		#tntj{
 		    font-family: 'Arima', cursive !important;
 			font-weight: bolder !important;
@@ -232,10 +239,10 @@ function showpassword() {
 			</th>
 		</tr>
 		 <tr id="head" class="head">
-			<th style="width:10px">S.NO</th>
-			<th style="width:20px">கிளை/பொறுப்பாளர்</th>
-			<th style="width:15px">நேரம்</th>
-			<th style="width:20px">தாஃயி பெயர்/தொடர்புக்கு</th>
+			<th class="head">S.NO</th>
+			<th class="head">கிளை/பொறுப்பாளர்</th>
+			<th class="head">நேரம்</th>
+			<th  class="head">தாஃயி பெயர்/தொடர்புக்கு</th>
 			
 		</tr>
 		<tr>
