--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 			padding: 10px !important;
 			font-weight: bolder !important;
 			font-size: 100% !important;
-                         width:10% !important;
+                         width:5% !important;
 		}
 .head{
               font-family: 'Tiro Tamil', serif !important;
 	     padding: 10px !important;
 		font-weight: bolder !important;
 		font-size: 100% !important;
-                 width:2px !important;
+                 width:1px !important;
 }
 		#tntj{
 		    font-family: 'Arima', cursive !important;
@@ -238,8 +238,8 @@ function showpassword() {
 			<th colspan="4" id="date"><strong>ஜும்மா நாள் :</strong><input type="date" id="date_style" >
 			</th>
 		</tr>
-		 <tr id="head" class="head">
-			<th class="head">S.NO</th>
+		 <tr id="head" >
+			<th>S.NO</th>
 			<th class="head">கிளை/பொறுப்பாளர்</th>
 			<th class="head">நேரம்</th>
 			<th  class="head">தாஃயி பெயர்/தொடர்புக்கு</th>
