--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 			padding: 10px !important;
 			font-weight: bolder !important;
 			font-size: 100% !important;
+                       width:5% !important;
             
 		}
       .head   {
@@ -110,7 +111,7 @@
 	     padding: 10px !important;
 		font-weight: bolder !important;
 		font-size: 100% !important;
-                 width:5px !important;
+                 width:auto !important;
 }
 		#tntj{
 		    font-family: 'Arima', cursive !important;
