--- a/index.html
+++ b/index.html
@@ -1045,10 +1045,8 @@ function showpassword() {
 </center>
 <script>
 function load(){
-    alert("hello after 10 second");
+    location.reload();
     }
-
-}
 function printing(){
    alert("Download PDF!");
    print();
