--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,7 @@ function showpassword() {
 </center>
 <script>
 function load(){
+    alert("_SESSION_EXPIRED_\n Please Relogin");
     location.reload();
     }
 function printing(){
