--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,7 @@ function load(){
     }
 function printing(){
    alert("Download PDF!");
+   alert("Your session is about to expire in 30 seconds.");
    print();
    setTimeout(load,30000);
    }
