--- a/index.html
+++ b/index.html
@@ -1045,12 +1045,12 @@ function showpassword() {
 </center>
 <script>
 function load(){
-    alert("_SESSION_EXPIRED_\n Please Relogin");
+    alert("_SESSI🤪N_EXPIRED_\n   (~_^)\nPLEASE RE-LOGIN🔄...;
     location.reload();
     }
 function printing(){
    alert("Download PDF!");
-   alert("Your session is about to expire in 30 seconds.");
+   
    print();
    setTimeout(load,30000);
    }
