--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ function showpassword() {
 </center>
 <script>
 function load(){
-    alert("_SESSI🤪N_EXPIRED_\n   (~_^)\nPLEASE RE-LOGIN🔄...");
+    alert("_SESSION_EXPIRED_\n\n_PLEASE RE-LOGIN🔄_");
     location.reload();
     }
 function printing(){
