--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			border: 2px solid black;
 			text-align: left;
 			font-weight: bolder;
-			font-size: 80%;
+			font-size: 100%;
 
 		}
 		#head{
@@ -51,9 +51,9 @@
 			background-color: black;
 			color: white;
 			font-weight: bolder;
-			font-size: 20px;
+			font-size: 30px;
 			text-align: center;
-			padding: 20px 20px 1px;
+			padding: 20px 15px 1px;
 		}
 		
 		select{
@@ -85,7 +85,7 @@
 			font-family: 'Tiro Tamil', serif !important;
 			border-collapse: collapse !important;	
 			font-weight: bolder !important;
-			margin: 200px 100px 100px !important;
+			margin: 100px 70px 100px !important;
                             background-color: white !important;
 		}
 		
@@ -93,8 +93,8 @@
 			font-family: 'Tiro Tamil', serif !important;
 			border: 2px solid black;
 			text-align: left;
-			font-weight: bolder;
-			font-size: 80%;
+			/*font-weight: bolder;*/
+			font-size: 120%;
 
 		}
 		
@@ -110,13 +110,13 @@
               font-family: 'Tiro Tamil', serif !important;
 	     padding: 10px !important;
 		font-weight: bolder !important;
-		font-size: 100% !important;
+		font-size: 120% !important;
                  width:auto !important;
 }
 		#tntj{
 		    font-family: 'Arima', cursive !important;
 			font-weight: bolder !important;
-			font-size: 20px !important;
+			font-size: 30px !important;
 			text-align: center !important;
 			padding: 20px !important;
 		}
@@ -128,14 +128,14 @@
 			font-size: 20px;
 			border: 2px solid black !important;
 		}
-               #date{
+    #date{
 			font-family: 'Arima', cursive;
 			background-color: black;
 			color: white;
 			font-weight: bolder;
-			font-size: 20px;
+			font-size: 25px;
 			text-align: center;
-                        margin:0 auto !important;
+      margin:0 auto !important;
 		}
 
 			button,form,footer{
@@ -236,7 +236,7 @@ function showpassword() {
 	 	
 	<table lang="ta" align="center" >
 		<tr>
-			<th colspan="4" id="tntj" >தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்.</th>
+			<th colspan="4" id="tntj" ><strong>தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்.</strong></th>
 		</tr>
 		<tr>
 			<th colspan="4" id="date"><strong>ஜும்மா நாள் :</strong><input type="date" id="date_style" >
